--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html data-n-head-ssr data-n-head="">
   <head>
-    <base href="/lab/"/>
+    <base href="/lab"/>
     <title data-n-head="true">.NET Core 社区 · 中国</title><meta data-n-head="true" charset="utf-8"><meta data-n-head="true" name="viewport" content="width=device-width,initial-scale=1"><link data-n-head="true" rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"><link rel="preload" href="/_nuxt/adceaa64c254eef759e0.js" as="script"><link rel="preload" href="/_nuxt/8756a23a8203b820328a.js" as="script"><link rel="preload" href="/_nuxt/97f0418b5475a5d044d6.css" as="style"><link rel="preload" href="/_nuxt/d0c065579df3dfc005ee.js" as="script"><link rel="preload" href="/_nuxt/cb77cd35d044596ba91d.js" as="script"><link rel="stylesheet" href="/_nuxt/97f0418b5475a5d044d6.css">
   </head>
   <body data-n-head="">
